Allow internal addition to unmodifiable list.